--- a/.github/workflows/scrape-and-build.yml
+++ b/.github/workflows/scrape-and-build.yml
@@ -1,46 +1,43 @@
 name: Scrape Huskers Schedule & Build TV Pages
 
-
 on:
-schedule:
-- cron: '14 * * * *' # hourly, offset
-workflow_dispatch: {}
+  schedule:
+    - cron: '14 * * * *'   # hourly, offset
+  workflow_dispatch:
 
+permissions:
+  contents: write   # allow the workflow to commit/push
 
 jobs:
-build:
-runs-on: ubuntu-latest
-steps:
-- name: Checkout
-uses: actions/checkout@v4
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
 
-- name: Set up Python
-uses: actions/setup-python@v5
-with:
-python-version: '3.11'
+      - name: Install deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests beautifulsoup4 lxml
 
+      # Run as a module so 'scraper/utils.py' imports work
+      - name: Run scraper
+        run: |
+          python -m scraper.scrape
 
-- name: Install deps
-run: |
-python -m pip install --upgrade pip
-pip install requests beautifulsoup4 lxml
-
-
-- name: Run scraper
-working-directory: scraper
-run: |
-python scrape.py
-
-
-- name: Commit any changes
-run: |
-git config user.name "github-actions"
-git config user.email "github-actions@users.noreply.github.com"
-git add -A
-if ! git diff --cached --quiet; then
-git commit -m "Update schedule & stadium lists [skip ci]"
-git push
-else
-echo "No changes to commit"
-fi
+      - name: Commit any changes
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add -A
+          if ! git diff --cached --quiet; then
+            git commit -m "Update schedule & stadium lists [skip ci]"
+            git push
+          else
+            echo "No changes to commit"
+          fi
