--- a/.github/workflows/test-logos.yml
+++ b/.github/workflows/test-logos.yml
@@ -42,13 +42,22 @@ jobs:
             docs/assets/opponents/_fetched/**
           if-no-files-found: warn
 
+     - name: Show what was downloaded
+        run: |
+          echo "Listing docs/assets/opponents/_fetched (if any):"
+          ls -la docs/assets/opponents/_fetched || true
+          echo "git status:"
+          git status --porcelain
+
       - name: Commit downloaded logos (if any)
+        shell: bash
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
           git add docs/assets/opponents/_fetched || true
-          if ! git diff --cached --quiet; then
+          if git diff --cached --quiet; then
+            echo "No logo files to commit."
+          else
             git commit -m "Probe: add fetched opponent logos (rendered)"
             git push
-          else
-            echo "No logo files to commit."
+          fi
